Add motion api
